force-app/main/default/objects/df_160_begunstigede__c/df_160_begunstigede__c.object-meta.xml
<CustomObject>
    <label>Begunstigede</label>
    <nameField>
        <label>Begunstigede Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Begunstigedes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>