force-app/main/default/objects/df_160_begunstigede__c/fields/begunst_p1__c.field-meta.xml
<CustomField>
    <fullName>begunst_p1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Begunstigede P1</label>
    <type>Checkbox</type>
</CustomField>