force-app/main/default/objects/df_160_begunstigede__c/fields/begunst_p2__c.field-meta.xml
<CustomField>
    <fullName>begunst_p2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Begunstigede P2</label>
    <type>Checkbox</type>
</CustomField>