force-app/main/default/objects/df_160_begunstigede__c/fields/begunst_person_el_gruppe__c.field-meta.xml
<CustomField>
    <fullName>begunst_person_el_gruppe__c</fullName>
    <label>Bestemt person eller gruppeb</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>begunst_vlg_person</fullName>
                <label>Tilføj bestemt person</label>
            </value>
            <value>
                <fullName>begunst_vlg_gruppe</fullName>
                <label>Tilføj gruppe af personer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>