force-app/main/default/objects/df_160_begunstigede__c/fields/begunst_procent__c.field-meta.xml
<CustomField>
    <fullName>begunst_procent__c</fullName>
    <label>Begunstigelsesprocent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>