force-app/main/default/objects/df_160_begunstigede__c/fields/primr_begunst_p1__c.field-meta.xml
<CustomField>
    <fullName>primr_begunst_p1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primær begunstiget P1</label>
    <type>Checkbox</type>
</CustomField>