force-app/main/default/objects/df_160_begunstigede__c/fields/subs_begunst_p1__c.field-meta.xml
<CustomField>
    <fullName>subs_begunst_p1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subsidiær begunstiget P1</label>
    <type>Checkbox</type>
</CustomField>