force-app/main/default/objects/df_160_begunstigede__c/fields/subs_begunst_p2__c.field-meta.xml
<CustomField>
    <fullName>subs_begunst_p2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subsidiær begunstiget P2</label>
    <type>Checkbox</type>
</CustomField>