force-app/main/default/objects/df_160_begunstigede__c/fields/vlg_begunstiget__c.field-meta.xml
<CustomField>
    <fullName>vlg_begunstiget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vælg begunstiget</label>
    <referenceTo>df_160_person__c</referenceTo>
    <relationshipLabel>vlg_begunstiget</relationshipLabel>
    <relationshipName>vlg_begunstiget</relationshipName>
    <type>Lookup</type>
</CustomField>