force-app/main/default/objects/df_160_begunstigede__c/fields/vlg_gruppe_begunst__c.field-meta.xml
<CustomField>
    <fullName>vlg_gruppe_begunst__c</fullName>
    <label>Vælg gruppeb</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>vlg_gruppe_begunst_brn</fullName>
                <label>Børn</label>
            </value>
            <value>
                <fullName>vlg_gruppe_begunst_brnebrn</fullName>
                <label>Børnebørn</label>
            </value>
            <value>
                <fullName>vlg_gruppe_begunst_nev_niece</fullName>
                <label>Nevøer/Niecer</label>
            </value>
            <value>
                <fullName>vlg_gruppe_begunst_sskende</fullName>
                <label>Søskende</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>